Added register wine functionality.
Created Wine entity with bean validation.
Created WineType Enum.
Created WineRepository.
Created WineService.

Added pt BR localResolver.
Created ValidationMessages.properties files.
Added Wine atributes to messages.properties.
Adjusted Wine form to bind Wine Object and display validation errors.
Added number format javascript library.
Added currency number format to price field at Wine form.


Signed-off-by: Anthonini <anthonini@gmail.com>

--- a/wines/src/main/resources/static/layout/stylesheets/wines.css
+++ b/wines/src/main/resources/static/layout/stylesheets/wines.css
@@ -1,3 +1,6 @@
+.wines-required > .control-label:after {
+	content: "*";
+}
 .wines-layout-page {
   position: relative;
   overflow-x: hidden;
@@ -77,6 +80,9 @@
   width: 210px;
 }
 
+.wines-required-fields-text{
+	text-align: center;
+}
 
 /*-------------------------------------------------*\
   Footer disclaimer
