--- a/wines/src/main/resources/templates/wine/form.html
+++ b/wines/src/main/resources/templates/wine/form.html
@@ -62,70 +62,81 @@
 	</aside>
 
 <section class="wines-layout-content  js-content">
-
-
-<div class="page-header">
-	<div class="container-fluid">
-		<h1>
-			Wine Register
-		</h1>
-	</div>
-</div>
-
-<div class="container-fluid">
-
-	<!-- <div class="alert  alert-danger  alert-dismissible" role="alert">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<i class="fa  fa-exclamation-circle"></i> Já existe um produto com o nome informado.
-	</div> -->
-
-	<form method="POST" class="form-vertical" th:action="@{/wines}">
-		
-		<div class="form-group">
-			<label for="input-product-name">Name</label>
-			<input id="input-product-name" type="text" class="form-control"/>
+	<div class="page-header">
+		<div class="container-fluid">
+			<h1>
+				Wine Register
+			</h1>
 		</div>
+	</div>
 
-		<div class="row">			
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="select-product-type">Type</label>
-					<select id="select-product-type" class="form-control">
-						<option value="">Select one</option>
-						<option value="TINT">Tint</option>
-						<option value="WHITE">White</option>
-						<option value="ROSE">Rose</option>
-					</select>
+	<div class="container-fluid">
+	
+		<div class="alert  alert-success  alert-dismissible" role="alert" th:if="${!#strings.isEmpty(message)}">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			<span th:text="${message}"></span>
+		</div>
+	
+		<form method="POST" class="form-vertical" th:action="@{/wines/new}" th:object="${wine}">
+			
+			<div class="alert  alert-danger  alert-dismissible" role="alert" th:if="${#fields.hasAnyErrors()}">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<th:block th:each="error : ${#fields.detailedErrors()}">
+					<div>
+							<i class="fa  fa-exclamation-circle"></i>
+							<span th:text="${error.message}"></span>
+					</div>
+				</th:block>
+			</div>
+			
+			<div class="form-group wines-required" th:classappend="${#fields.hasErrors('name')} ? has-error">
+				<label for="input-product-name" class="control-label">Name</label>
+				<input id="input-product-name" type="text" class="form-control" th:field="*{name}" />
+			</div>
+	
+			<div class="row">			
+				<div class="col-sm-6">
+					<div class="form-group wines-required" th:classappend="${#fields.hasErrors('wineType')} ? has-error">
+						<label for="select-product-type" class="control-label">Type</label>
+						<select id="select-product-type" class="form-control" th:field="*{wineType}">
+							<option value="">Select one</option>
+							<option th:each="wineType : ${wineTypes}" th:value="${wineType}" th:text="#{|wineType.${wineType}|}">Wine Type</option>
+						</select>
+					</div>
+				</div>
+				
+				<div class="col-sm-6">
+					<div class="form-group wines-required" th:classappend="${#fields.hasErrors('price')} ? has-error">
+						<label for="input-product-price" class="control-label">Price</label>
+						<input id="input-product-price" type="text" class="form-control js-currency" placeholder="R$" th:field="*{price}"/>
+					</div>
 				</div>
 			</div>
 			
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="input-product-price">Price</label>
-					<input id="input-product-price" type="text" class="form-control" placeholder="$"/>
-				</div>
+			<div class="form-group">
+				<button class="btn  btn-primary" type="submit">Save</button>
 			</div>
-		</div>
-		
-		<div class="form-group">
-			<button class="btn  btn-primary" type="submit">Save</button>
-		</div>
-
-	</form>
-</div>
-
-	</section>
+			
+			<div class="wines-required-fields-text">
+				* Required fields
+			</div>
 	
-	<footer class="wines-layout-footer  js-content">
-		<div class="container-fluid">
-			<span class="wines-footer-disclaimer">&copy; 2018 Anthonini. All rigths reserved.</span>
-		</div>
-	</footer>
+		</form>
+	</div>
+
+</section>
+	
+<footer class="wines-layout-footer  js-content">
+	<div class="container-fluid">
+		<span class="wines-footer-disclaimer">&copy; 2018 Anthonini. All rigths reserved.</span>
+	</div>
+</footer>
 
 </div>
 
 <script th:src="@{/layout/javascripts/vendors.min.js}"></script>
 <script th:src="@{/layout/javascripts/wines.js}"></script>
 
+<script th:src="@{/javascripts/vendors/jquery.masknumber.min.js}"></script>
 </body>
 </html>
