--- a/wines/src/main/resources/templates/wine/list.html
+++ b/wines/src/main/resources/templates/wine/list.html
@@ -1,67 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt"
 	xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{layout/layout-default}">
 
-<head>
-	<meta charset="UTF-8"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-	<title>Wines</title>
-
-	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/vendors.min.css}"/>
-	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/wines.css}"/>
-	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/application.css}"/>
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-</head>
 <body>
 
-<div class="wines-layout-page">
-	<nav class="navbar  navbar-fixed-top  navbar-default  js-sticky-reference" id="main-navbar">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<a class="navbar-brand  hidden-xs" href="#"> 
-					<img alt="Anthonini" th:src="@{/layout/images/logo-small-white.png}"/>
-				</a>
-		
-				<ul class="nav  navbar-nav">
-					<li><a href="#" class="js-sidebar-toggle"><i class="fa  fa-bars"></i></a>
-					</li>
-				</ul>
-			</div>
-	
-			<ul class="nav navbar-nav  navbar-right">
-				<li>
-				  <a href="#"><em class="fa  fa-sign-out"></em></a>
-				</li> 
-			</ul>
-		</div>
-	</nav>
-
-	<aside class="wines-layout-sidebar  js-sidebar">
-		<div class="wines-layout-sidebar__content">
-		    <nav class="wines-menu  js-menu">
-		      <ul class="wines-menu__list">
-		        <li class="wines-menu__item">
-		          <a th:href="@{/wines/new}"><i class="fa  fa-fw  fa-home"></i><span>Register</span></a>
-		        </li>
-		        
-		        <li class="wines-menu__item">
-		          <a th:href="@{/wines}"><i class="fa  fa-fw  fa-search is-active"></i><span>Search</span></a>
-		        </li>
-		      </ul>
-		    </nav>
-		</div>
-	</aside>
-
-<section class="wines-layout-content  js-content">
+<section layout:fragment="content">
 	<div class="page-header">
 		<div class="container-fluid">
 			<h1>
@@ -118,18 +64,6 @@
 	</div>
 
 </section>
-	
-<footer class="wines-layout-footer  js-content">
-	<div class="container-fluid">
-		<span class="wines-footer-disclaimer">&copy; 2018 Anthonini. All rigths reserved.</span>
-	</div>
-</footer>
 
-</div>
-
-<script th:src="@{/layout/javascripts/vendors.min.js}"></script>
-<script th:src="@{/layout/javascripts/wines.js}"></script>
-
-<script th:src="@{/javascripts/vendors/jquery.masknumber.min.js}"></script>
 </body>
 </html>
