--- a/wines/src/main/resources/templates/wine/form.html
+++ b/wines/src/main/resources/templates/wine/form.html
@@ -36,6 +36,8 @@
 				</th:block>
 			</div>
 			
+			<input type="hidden" th:field="*{id}" />
+			
 			<div class="form-group wines-required" th:classappend="${#fields.hasErrors('name')} ? has-error">
 				<label for="input-product-name" class="control-label">Name</label>
 				<input id="input-product-name" type="text" class="form-control" th:field="*{name}" />
