--- a/wines/src/main/resources/templates/layout/layout-default.html
+++ b/wines/src/main/resources/templates/layout/layout-default.html
@@ -40,5 +40,7 @@
 <script th:src="@{/layout/javascripts/wines.js}"></script>
 
 <script th:src="@{/javascripts/vendors/jquery.masknumber.min.js}"></script>
+
+<th:block layout:fragment="extra-javascript"></th:block>
 </body>
 </html>
