--- a/wines/src/main/resources/templates/wine/list.html
+++ b/wines/src/main/resources/templates/wine/list.html
@@ -3,6 +3,7 @@
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:data="http://www.thymeleaf.org/extras/data-attribute"
 	layout:decorate="~{layout/layout-default}">
 
 <body>
@@ -17,6 +18,11 @@
 	</div>
 
 	<div class="container-fluid">
+		
+		<div class="alert  alert-success  alert-dismissible" role="alert" th:if="${!#strings.isEmpty(message)}">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			<span th:text="${message}"></span>
+		</div>
 		
 		<form method="GET" class="form-vertical js-form-loading" th:object="${wineFilter}">		
 			
@@ -51,7 +57,10 @@
 			    			<td class="text-center" th:text="#{|wineType.${wine.wineType}|}"></td>
 			    			<td class="text-right" th:text="|R$ ${{wine.price}}|"></td>
 			    			<td class="text-center">
-			    				<i class="fa fa-trash" style="cursor:pointer"></i>
+			    				<i class="fa fa-trash" style="cursor:pointer"
+			    					data-toggle="modal" data-target="#deleteConfirmationModal"
+			    					data:name="${wine.name}"
+			    					data:url-delete="@{/wines/{id}(id=${wine.id})}"></i>
 			    			</td>
 			    		</tr>
 			    		<tr th:if="${#lists.isEmpty(wines)}">
@@ -63,7 +72,32 @@
 		</form>
 	</div>
 
+	<div class="modal fade" id="deleteConfirmationModal" role="dialog">
+		<div class="modal-dialog"></div>
+		<div class="modal-content">
+			<form th:action="@{/vinhos}" method="POST">
+				<input type="hidden" name="_method" value="DELETE">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title">Remove wine</h4>
+				</div>
+				<div class="modal-body">
+					<span>Are you sure?</span>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+					<button type="submit" class="btn btn-primary">Excluir</button>
+				</div>
+			</form>
+		</div>
+	</div>
 </section>
+
+<th:block layout:fragment="extra-javascript">
+	<script th:src="@{/layout/javascripts/list.delete-confirmation-modal.js}"></script>
+</th:block>
 
 </body>
 </html>
