--- a/wines/src/main/resources/templates/menu/navbar.html
+++ b/wines/src/main/resources/templates/menu/navbar.html
@@ -19,7 +19,10 @@
 
 		<ul class="nav navbar-nav  navbar-right">
 			<li>
-			  <a href="#"><em class="fa  fa-sign-out"></em></a>
+				<p class="navbar-text" th:text="${#authentication.name}"></p>
+			</li>
+			<li>
+			  <a th:href="@{/logout}"><em class="fa  fa-sign-out"></em></a>
 			</li> 
 		</ul>
 	</div>
