--- a/wines/src/main/resources/templates/menu/side-menu.html
+++ b/wines/src/main/resources/templates/menu/side-menu.html
@@ -2,18 +2,23 @@
 <html lang="pt"
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 	
 	<aside class="wines-layout-sidebar  js-sidebar" th:fragment="layout-sidebar">
 		<div class="wines-layout-sidebar__content">
 		    <nav class="wines-menu  js-menu">
 		      <ul class="wines-menu__list">
-		        <li class="wines-menu__item">
-		          <a th:href="@{/wines/new}"><i class="fa  fa-fw  fa-home"></i><span>Register</span></a>
+		        <li class="wines-menu__item" sec:authorize="hasRole('ROLE_REGISTER_WINE')">
+		          <a th:href="@{/wines/new}"><i class="fa  fa-fw  fa-home" th:classappend="${#httpServletRequest.requestURI == '/wines/new'} ? is-active">
+		          	</i><span>Register</span>
+		          </a>
 		        </li>
 		        
-		        <li class="wines-menu__item">
-		          <a th:href="@{/wines}"><i class="fa  fa-fw  fa-search is-active"></i><span>Search</span></a>
+		        <li class="wines-menu__item" sec:authorize="hasRole('ROLE_SEARCH_WINE')">
+		          <a th:href="@{/wines}"><i class="fa  fa-fw  fa-search" th:classappend="${#httpServletRequest.requestURI == '/wines'} ? is-active">
+		          	</i><span>Search</span>
+		          </a>
 		        </li>
 		      </ul>
 		    </nav>
